--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "opencv": "^6.0.0",
+    "path": "^0.12.7",
     "shelljs": "^0.7.8",
     "tmi.js": "^1.2.1"
   }
